@@ -44,7 +44,6 @@ public:
     Action *decreaseVolumeAction;
     Action *savePlayQueueAction;
     Action *addToPlayQueueAction;
-    Action *addRandomToPlayQueueAction;
     Action *replacePlayQueueAction;
     Action *addWithPriorityAction;
     Action *addToStoredPlaylistAction;
